# polars-darwin-core

./: README.md  pyproject.toml
sample-dataset/: multimedia.txt
src/lazyframes/: darwin_core_csv.py
src/polars_darwin_core/: __init__.py  archive.py  darwin_core.py  lf_csv.py
tests/: test_dataset.py  test_lf_csv.py
