[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polars-darwin-core"
description = "Helpers for working with Darwin Core (DwC) CSVs using Polars."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
authors = [{ name = "Corey Farwell" }]
keywords = ["polars", "darwin-core", "biodiversity", "gbif", "csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
# Core runtime dependencies
dependencies = ["polars>=0.20"]

[project.optional-dependencies]
dev = ["mypy>=1.9", "build>=1.2", "twine>=5.0"]

[tool.hatch.version]
path = "src/polars_darwin_core/__init__.py"

[tool.mypy]
strict = true
python_version = "3.10"
